Add CredentialRemoveRefrences API
