# api/server/sdk/api/api.swagger.json
@@ -2541,6 +2541,10 @@
         },
         "type": "object"
       },
+      "apiSdkCredentialRemoveReferencesResponse": {
+        "title": "Empty response",
+        "type": "object"
+      },
       "apiSdkCredentialValidateResponse": {
         "title": "Empty response",
         "type": "object"
@@ -5136,7 +5140,7 @@
   },
   "info": {
     "title": "OpenStorage SDK",
-    "version": "0.99.0"
+    "version": "0.100.0"
   },
   "openapi": "3.0.0",
   "paths": {
@@ -6061,6 +6065,37 @@
           }
         },
         "summary": "Inspect returns the information about a credential, but does not return the secret key.",
+        "tags": [
+          "OpenStorageCredentials"
+        ]
+      }
+    },
+    "/v1/credentials/removeref/{credential_id}": {
+      "post": {
+        "operationId": "RemoveReferences",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "credential_id",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/apiSdkCredentialRemoveReferencesResponse"
+                }
+              }
+            },
+            "description": ""
+          }
+        },
+        "summary": "RemoveReferences is used to remove references to credentials",
         "tags": [
           "OpenStorageCredentials"
         ]
